Gameboard: bug-fix choose token was impossible on firefox / Result board: minor fix on style

--- a/assets/style/03-layouts/main/_result.scss
+++ b/assets/style/03-layouts/main/_result.scss
@@ -4,15 +4,16 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
     position: absolute;
     top: 0;
     left: -200%;
     right: 0;
     bottom: 0;
     margin: auto;
-
+    
     @include mobile {
+        align-items: flex-start;
         width: 80%;
         height: auto;
     }
